--- a/src/style.css
+++ b/src/style.css
@@ -12,12 +12,16 @@ body {
 }
 
 header {
+    position: fixed;
+    width: 100%;
     background-color: #109CEB;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 10px;
-    margin: 20px;
+    border: #ffffff;
+    border-style: solid;
+    border-width: 10px;
+    z-index: 4;
 }
 
 h1 {
@@ -75,13 +79,13 @@ img {
 }
 
 nav ul {
-    height: 100%;
+    height: 200%;
     width: 100%;
     list-style: none;
 }
 
 nav ul li {
-    line-height: 60px;
+    line-height: 100px;
     text-align: center;
 }
 
@@ -92,6 +96,11 @@ nav ul li {
     justify-content: center;
     border-color: transparent;
     cursor: pointer;
+}
+
+.btnList:hover {
+    font-size: 20px;
+    font-weight: 600;
 }
 
 #bigDivs,
@@ -196,7 +205,7 @@ nav ul li {
     color: #ffffff;
     border-style: solid;
     border-width: 4px;
-    z-index: 3;
+    z-index: 6;
     text-align: center;
     padding: 10px;
     border-radius: 35px;
